--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/portfolio.html">Portfolio</a>
+            <a class="nav-link active" href="/portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact.html">Contact Me</a>
@@ -32,7 +32,6 @@
         </ul>
       </div>
     </header>
-
 
 
 
