--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <!-- Name, click to move to main page -->
       <a class="navbar-brand" href="./index.html">Paul Kwon</a>
 
-      <!--  -->
+      <!-- Menu buttons -->
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item">
@@ -32,6 +32,36 @@
         </ul>
       </div>
     </header>
+
+    <div class="container border border-primary mx-auto mt-3">
+      <div class="text-primary pt-3">
+        <h2>Contact Me</h2>
+      </div>
+
+      <hr>
+
+      <div class="bd-example">
+        <form>
+          <div class="form-group">
+            <label for="contact-name">Your name:</label>
+            <input type="text" class="form-control" placeholder="Enter name">
+          </div>
+          <div class="form-group">
+            <label for="contact-email">Your email:</label>
+            <input type="email" class="form-control" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="contact-message">Message:</label>
+            <textarea type="text" class="form-control" placeholder="Message"></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+
+
+    </div>
 
 
 
