--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
       <!-- Name, click to move to main page -->
       <a class="navbar-brand" href="./index.html">Paul Kwon</a>
 
-      <!--  -->
+      <!-- Menu buttons -->
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item">
