--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
       <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="./">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/portfolio.html">Portfolio</a>
+            <a class="nav-link active" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact Me</a>
+            <a class="nav-link" href="./contact.html">Contact Me</a>
           </li>
         </ul>
       </div>
