added portfolio page proto version

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,73 @@
       </div>
     </header>
 
+    <!-- Portfolio Page, with Bootstrap grid system -->
+    <div class="container border border-secondary mx-auto mt-3">
+
+      <!-- Portfolio header -->
+      <div class="text-primary pt-3 ml-5">
+        <h2>Portfolio</h2>
+      </div>
+
+      <hr class="primary">
+
+      <!-- First Row -->
+      <div class="row align-items-center text-center mt-3">
+        <!-- First Row, First Column -->
+        <div class="col">
+          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+          class="image-fluid" alt="hacked chrome">
+          <br>
+          <p class="text-muted">Hacked Chrome</p>
+        </div>
+
+        <!-- First Row, Second Column -->
+        <div class="col">
+          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+          class="image-fluid" alt="hacked chrome">
+          <br>
+          <p class="text-muted">Hacked Chrome</p>
+        </div>
+      </div>
+
+      <!-- Second Row -->
+      <div class="row align-items-center text-center mt-6">
+        <!-- Second Row, First Column -->
+        <div class="col">
+          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+          class="image-fluid" alt="hacked chrome">
+          <br>
+          <p class="text-muted">Hacked Chrome</p>
+        </div>
+
+        <!-- Second Row, Second Column -->
+        <div class="col">
+          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+          class="image-fluid" alt="hacked chrome">
+          <br>
+          <p class="text-muted">Hacked Chrome</p>
+        </div>
+      </div>
+
+      <!-- Third Row -->
+      <div class="row align-items-center text-center mt-6">
+        <!-- Third Row, First Column -->
+        <div class="col">
+          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+          class="image-fluid" alt="hacked chrome">
+          <br>
+          <p class="text-muted">Hacked Chrome</p>
+        </div>
+
+        <!-- Third Row, Second Column -->
+        <div class="col">
+          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+          class="image-fluid" alt="hacked chrome">
+          <br>
+          <p class="text-muted">Hacked Chrome</p>
+        </div>
+      </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
