--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       </div>
     </header>
 
-    <div class="container border border-primary mx-auto mt-3">
+    <div class="container border border-secondary mx-auto mt-3">
       <div class="text-primary pt-3">
         <h2>Contact Me</h2>
       </div>
@@ -59,9 +59,8 @@
           </div>
         </form>
       </div>
-
-
     </div>
+
 
 
 
