--- a/portfolio.html
+++ b/portfolio.html
@@ -47,18 +47,22 @@
       <div class="row align-items-center text-center mt-3">
         <!-- First Row, First Column -->
         <div class="col">
-          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-          class="image-fluid" alt="hacked chrome">
-          <br>
-          <p class="text-muted">Hacked Chrome</p>
+          <div class="bd-example border border-primary mx-3 my-2">
+            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+            class="image-fluid" alt="hacked chrome">
+            <br>
+            <p class="text-muted">Hacked Chrome</p>
+          </div>
         </div>
 
         <!-- First Row, Second Column -->
         <div class="col">
-          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-          class="image-fluid" alt="hacked chrome">
-          <br>
-          <p class="text-muted">Hacked Chrome</p>
+          <div class="bd-example border border-primary mx-3 my-2">
+            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+            class="image-fluid" alt="hacked chrome">
+            <br>
+            <p class="text-muted">Hacked Chrome</p>
+          </div>
         </div>
       </div>
 
@@ -66,37 +70,45 @@
       <div class="row align-items-center text-center mt-6">
         <!-- Second Row, First Column -->
         <div class="col">
-          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-          class="image-fluid" alt="hacked chrome">
-          <br>
-          <p class="text-muted">Hacked Chrome</p>
+          <div class="bd-example border border-primary mx-3 my-2">
+            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+            class="image-fluid" alt="hacked chrome">
+            <br>
+            <p class="text-muted">Hacked Chrome</p>
+          </div>
         </div>
 
         <!-- Second Row, Second Column -->
         <div class="col">
-          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-          class="image-fluid" alt="hacked chrome">
-          <br>
-          <p class="text-muted">Hacked Chrome</p>
+          <div class="bd-example border border-primary mx-3 my-2">
+            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+            class="image-fluid" alt="hacked chrome">
+            <br>
+            <p class="text-muted">Hacked Chrome</p>
+          </div>
         </div>
       </div>
 
       <!-- Third Row -->
-      <div class="row align-items-center text-center mt-6">
+      <div class="row align-items-center text-center mt-6" style="margin-bottom: 20px">
         <!-- Third Row, First Column -->
         <div class="col">
-          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-          class="image-fluid" alt="hacked chrome">
-          <br>
-          <p class="text-muted">Hacked Chrome</p>
+          <div class="bd-example border border-primary mx-3 my-2">
+            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+            class="image-fluid" alt="hacked chrome">
+            <br>
+            <p class="text-muted">Hacked Chrome</p>
+          </div>
         </div>
 
         <!-- Third Row, Second Column -->
         <div class="col">
-          <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-          class="image-fluid" alt="hacked chrome">
-          <br>
-          <p class="text-muted">Hacked Chrome</p>
+          <div class="bd-example border border-primary mx-3 my-2">
+            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
+            class="image-fluid" alt="hacked chrome">
+            <br>
+            <p class="text-muted">Hacked Chrome</p>
+          </div>
         </div>
       </div>
     </div>
