adjusted portfolio spacing

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
       <div class="row align-items-center text-center mt-3">
         <!-- First Row, First Column -->
         <div class="col">
-          <div class="bd-example border border-primary mx-3 my-2">
+          <div class="pt-3 border border-primary mx-3 my-2">
             <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
             class="image-fluid" alt="hacked chrome">
             <br>
@@ -57,7 +57,7 @@
 
         <!-- First Row, Second Column -->
         <div class="col">
-          <div class="bd-example border border-primary mx-3 my-2">
+          <div class="pt-3 border border-primary mx-3 my-2">
             <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
             class="image-fluid" alt="hacked chrome">
             <br>
@@ -70,7 +70,7 @@
       <div class="row align-items-center text-center mt-6">
         <!-- Second Row, First Column -->
         <div class="col">
-          <div class="bd-example border border-primary mx-3 my-2">
+          <div class="pt-3 border border-primary mx-3 my-2">
             <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
             class="image-fluid" alt="hacked chrome">
             <br>
@@ -80,7 +80,7 @@
 
         <!-- Second Row, Second Column -->
         <div class="col">
-          <div class="bd-example border border-primary mx-3 my-2">
+          <div class="pt-3 border border-primary mx-3 my-2">
             <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
             class="image-fluid" alt="hacked chrome">
             <br>
@@ -93,7 +93,7 @@
       <div class="row align-items-center text-center mt-6" style="margin-bottom: 20px">
         <!-- Third Row, First Column -->
         <div class="col">
-          <div class="bd-example border border-primary mx-3 my-2">
+          <div class="pt-3 border border-primary mx-3 my-2">
             <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
             class="image-fluid" alt="hacked chrome">
             <br>
@@ -103,7 +103,7 @@
 
         <!-- Third Row, Second Column -->
         <div class="col">
-          <div class="bd-example border border-primary mx-3 my-2">
+          <div class="pt-3 border border-primary mx-3 my-2">
             <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
             class="image-fluid" alt="hacked chrome">
             <br>
