implemented bootstrap-cards for portfolio items

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       </div>
     </header>
 
+    <!-- Jumbotron Header -->
+    <div class="jumbotron">
+      <h1 class="text-center"><b>Index Page</b></h1>
+
+    </div>
+
 
 
 
