--- a/portfolio.html
+++ b/portfolio.html
@@ -37,77 +37,101 @@
     <div class="container border border-secondary mx-auto mt-3">
 
       <!-- Portfolio header -->
-      <div class="text-primary pt-3 ml-5">
+      <div class="text-white bg-primary py-3 mt-2 text-center">
         <h2>Portfolio</h2>
       </div>
 
-      <hr class="primary">
+      <hr>
 
       <!-- First Row -->
-      <div class="row align-items-center text-center mt-3">
+      <div class="row text-center mt-3" style="margin-top:10px;">
         <!-- First Row, First Column -->
         <div class="col">
-          <div class="pt-3 border border-primary mx-3 my-2">
-            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-            class="image-fluid" alt="hacked chrome">
-            <br>
-            <p class="text-muted">Hacked Chrome</p>
+          <div class="card border border-primary m-auto p-3" style="width:300px">
+            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <div class="card-body">
+              <h5 class="card-title">Hacked Chrome</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="card-body">
+                <a href="#" class="card-link">Take a Look</a>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- First Row, Second Column -->
         <div class="col">
-          <div class="pt-3 border border-primary mx-3 my-2">
-            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-            class="image-fluid" alt="hacked chrome">
-            <br>
-            <p class="text-muted">Hacked Chrome</p>
+          <div class="card border border-primary m-auto p-3" style="width:300px">
+            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <div class="card-body">
+              <h5 class="card-title">Hacked Chrome</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="card-body">
+                <a href="#" class="card-link">Take a Look</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- Second Row -->
-      <div class="row align-items-center text-center mt-6">
+      <div class="row text-center mt-3">
         <!-- Second Row, First Column -->
         <div class="col">
-          <div class="pt-3 border border-primary mx-3 my-2">
-            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-            class="image-fluid" alt="hacked chrome">
-            <br>
-            <p class="text-muted">Hacked Chrome</p>
+          <div class="card border border-primary m-auto p-3" style="width:300px">
+            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <div class="card-body">
+              <h5 class="card-title">Hacked Chrome</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="card-body">
+                <a href="#" class="card-link">Take a Look</a>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Second Row, Second Column -->
         <div class="col">
-          <div class="pt-3 border border-primary mx-3 my-2">
-            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-            class="image-fluid" alt="hacked chrome">
-            <br>
-            <p class="text-muted">Hacked Chrome</p>
+          <div class="card border border-primary m-auto p-3" style="width:300px">
+            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <div class="card-body">
+              <h5 class="card-title">Hacked Chrome</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="card-body">
+                <a href="#" class="card-link">Take a Look</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- Third Row -->
-      <div class="row align-items-center text-center mt-6" style="margin-bottom: 20px">
+      <div class="row text-center mt-3" style="margin-bottom: 30px;">
         <!-- Third Row, First Column -->
         <div class="col">
-          <div class="pt-3 border border-primary mx-3 my-2">
-            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-            class="image-fluid" alt="hacked chrome">
-            <br>
-            <p class="text-muted">Hacked Chrome</p>
+          <div class="card border border-primary m-auto p-3" style="width:300px">
+            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <div class="card-body">
+              <h5 class="card-title">Hacked Chrome</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="card-body">
+                <a href="#" class="card-link">Take a Look</a>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Third Row, Second Column -->
         <div class="col">
-          <div class="pt-3 border border-primary mx-3 my-2">
-            <img src="http://siliconangle.com/files/2013/10/chrome-hacked-story-300x300.jpg"
-            class="image-fluid" alt="hacked chrome">
-            <br>
-            <p class="text-muted">Hacked Chrome</p>
+          <div class="card border border-primary m-auto p-3" style="width:300px">
+            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <div class="card-body">
+              <h5 class="card-title">Hacked Chrome</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div class="card-body">
+                <a href="#" class="card-link">Take a Look</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
