index page (About me) added

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
             <div class="card-body">
               <h5 class="card-title">Hacked Chrome</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet, conasdfksdlfjasldjf;lasdjf;ljasdl;kfjas;lfjas;ljdf;lkasjdfl;kasjdfl;kajsdfl;kjasl;fjasdsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <div class="card-body">
                 <a href="#" class="card-link">Take a Look</a>
               </div>
