--- a/index.html
+++ b/index.html
@@ -34,8 +34,30 @@
     </header>
 
     <!-- Jumbotron Header -->
-    <div class="jumbotron">
-      <h1 class="text-center"><b>Index Page</b></h1>
+    <div class="container bg-light p-2 pb-3">
+      <div class="row my-2 mx-auto">
+        <h1 class="text-primary"><b>About me</b></h1>
+      </div>
+
+      <div class="row">
+        <div class="col-md-5">
+          <div class="card img-responsive img-thumbnail">
+            <img src="./assets/img/anonymous-logo.png" alt="anonymous" class="card-img-top">
+          </div>
+        </div>
+        <div class="col-md-5">
+          <h3>Anonymous</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo, orci nec sollicitudin faucibus, risus libero tincidunt ipsum, sit amet gravida massa mi nec turpis.
+          </p>
+          <p>
+            Phasellus turpis augue, viverra a nunc nec, varius ultrices massa. Etiam luctus tempor ante id ultrices. Nullam leo purus, pulvinar eu gravida in, malesuada in eros. Maecenas pellentesque laoreet lacus a egestas. Ut ultrices tincidunt magna vitae gravida. Praesent feugiat consectetur massa, et dignissim ex. Duis suscipit orci at tincidunt suscipit. 
+          </p>
+          <p>
+            Nullam ultrices arcu velit, ut porta tellus auctor vel. Cras consequat convallis fringilla. Vivamus ex risus, auctor ac ligula nec, cursus pulvinar risus.
+          </p>
+        </div>
+      </div>
 
     </div>
 
