added a sticky footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>My Page</title>
   </head>
   <body>
@@ -33,18 +36,21 @@
       </div>
     </header>
 
-    <!-- Jumbotron Header -->
+    <!-- Main content: About me -->
     <div class="container bg-light p-2 pb-3">
+      <!-- Content header -->
       <div class="row my-2 mx-auto">
         <h1 class="text-primary"><b>About me</b></h1>
       </div>
 
       <div class="row">
+        <!-- First column: responsive image -->
         <div class="col-md-5">
-          <div class="card img-responsive img-thumbnail">
+          <div class="card img-responsive">
             <img src="./assets/img/anonymous-logo.png" alt="anonymous" class="card-img-top">
           </div>
         </div>
+        <!-- Second column: Description -->
         <div class="col-md-5">
           <h3>Anonymous</h3>
           <p>
@@ -58,9 +64,15 @@
           </p>
         </div>
       </div>
-
     </div>
+    <!-- End of Content -->
 
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container text-center">
+        <span class="text-muted">UCLA BOOTCAMP FULLSTACK FLEX FULLTIME - JAN 2020 CLASS</span>
+      </div>
+    </footer>
 
 
 
