--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>My Page</title>
   </head>
   <body>
@@ -60,7 +63,14 @@
         </form>
       </div>
     </div>
+    <!-- End of Content -->
 
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container text-center">
+        <span class="text-muted">UCLA BOOTCAMP FULLSTACK FLEX FULLTIME - JAN 2020 CLASS</span>
+      </div>
+    </footer>
 
 
 
