improved responsiveness (box sizing, etc)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>My Page</title>
   </head>
   <body>
-    <!-- Header -->
+    <!-- Navbar -->
     <header class="navbar navbar-expand navbar-dark bg-primary flex-column flex-md-row bd-navbar">
       <!-- Name, click to move to main page -->
       <a class="navbar-brand" href="./index.html">Paul Kwon</a>
@@ -35,29 +35,31 @@
         </ul>
       </div>
     </header>
+    <!-- End of Navbar -->
 
     <!-- Main content: About me -->
     <div class="container bg-light p-2 pb-3">
-      <!-- Content header -->
-      <div class="row my-2 mx-auto">
-        <h1 class="text-primary"><b>About me</b></h1>
+      <div class="row justify-content-md-center">
+        <div class="col-0 px-3">
+          <h1 class="text-primary"><b>About me</b></h1>
+        </div>
       </div>
 
-      <div class="row">
+      <div class="row justify-content-md-center">
         <!-- First column: responsive image -->
-        <div class="col-md-5">
+        <div class="col-lg-4">
           <div class="card img-responsive">
             <img src="./assets/img/anonymous-logo.png" alt="anonymous" class="card-img-top">
           </div>
         </div>
         <!-- Second column: Description -->
-        <div class="col-md-5">
+        <div class="col-lg-4">
           <h3>Anonymous</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo, orci nec sollicitudin faucibus, risus libero tincidunt ipsum, sit amet gravida massa mi nec turpis.
           </p>
           <p>
-            Phasellus turpis augue, viverra a nunc nec, varius ultrices massa. Etiam luctus tempor ante id ultrices. Nullam leo purus, pulvinar eu gravida in, malesuada in eros. Maecenas pellentesque laoreet lacus a egestas. Ut ultrices tincidunt magna vitae gravida. Praesent feugiat consectetur massa, et dignissim ex. Duis suscipit orci at tincidunt suscipit. 
+            Phasellus turpis augue, viverra a nunc nec, varius ultrices massa. Etiam luctus tempor ante id ultrices. Nullam leo purus, pulvinar eu gravida in, malesuada in eros. Maecenas pellentesque laoreet lacus a egestas. Ut ultrices tincidunt magna vitae gravida. Praesent feugiat consectetur massa, et dignissim ex. Duis suscipit orci at tincidunt suscipit.
           </p>
           <p>
             Nullam ultrices arcu velit, ut porta tellus auctor vel. Cras consequat convallis fringilla. Vivamus ex risus, auctor ac ligula nec, cursus pulvinar risus.
