--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <title>My Page</title>
   </head>
   <body>
-    <!-- Header -->
+    <!-- Navbar -->
     <header class="navbar navbar-expand navbar-dark bg-primary flex-column flex-md-row bd-navbar">
       <!-- Name, click to move to main page -->
       <a class="navbar-brand" href="./index.html">Paul Kwon</a>
@@ -35,6 +35,7 @@
         </ul>
       </div>
     </header>
+    <!-- End of Navbar -->
 
     <!-- Portfolio Page, with Bootstrap grid system -->
     <div class="container border border-secondary mx-auto mt-3">
@@ -65,9 +66,9 @@
         <!-- First Row, Second Column -->
         <div class="col">
           <div class="card border border-primary m-auto p-3" style="width:300px">
-            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <img class="card-img-top image-fluid" src="./assets/img/bankofamerica.png" alt="hacked bank of america">
             <div class="card-body">
-              <h5 class="card-title">Hacked Chrome</h5>
+              <h5 class="card-title">Hacked Bank of America</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <div class="card-body">
                 <a href="#" class="card-link">Take a Look</a>
