--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <title>My Page</title>
   </head>
   <body>
-    <!-- Header -->
+    <!-- Navbar -->
     <header class="navbar navbar-expand navbar-dark bg-primary flex-column flex-md-row bd-navbar">
       <!-- Name, click to move to main page -->
       <a class="navbar-brand" href="./index.html">Paul Kwon</a>
@@ -35,32 +35,35 @@
         </ul>
       </div>
     </header>
+    <!-- End of Navbar -->
 
-    <div class="container border border-secondary mx-auto mt-3">
-      <div class="text-primary pt-3">
-        <h2>Contact Me</h2>
-      </div>
+    <!-- Main content: Contact Me Form -->
+    <div class="container mx-auto mt-3">
+      <div class="row justify-content-md-center">
+        <div class="col-lg-6 border border-dark">
+          <div class="text-primary pt-3">
+            <h2>Contact Me</h2>
+          </div>
+    
+          <hr>
 
-      <hr>
-
-      <div class="bd-example">
-        <form>
-          <div class="form-group">
-            <label for="contact-name">Your name:</label>
-            <input type="text" class="form-control" placeholder="Enter name">
-          </div>
-          <div class="form-group">
-            <label for="contact-email">Your email:</label>
-            <input type="email" class="form-control" placeholder="Enter email">
-          </div>
-          <div class="form-group">
-            <label for="contact-message">Message:</label>
-            <textarea type="text" class="form-control" placeholder="Message"></textarea>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </form>
+          <form>
+            <div class="form-group">
+              <label for="contact-name">Your name:</label>
+              <input type="text" class="form-control" placeholder="Enter name">
+            </div>
+            <div class="form-group">
+              <label for="contact-email">Your email:</label>
+              <input type="email" class="form-control" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="contact-message">Message:</label>
+              <textarea type="text" class="form-control" placeholder="Message"></textarea>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form> 
       </div>
     </div>
     <!-- End of Content -->
