Fixed the footer position

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form> 
+        </div>
       </div>
     </div>
     <!-- End of Content -->
