added some images to portfolio, some with description

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,10 +83,10 @@
         <!-- Second Row, First Column -->
         <div class="col">
           <div class="card border border-primary m-auto p-3" style="width:300px">
-            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <img class="card-img-top image-fluid" src="./assets/img/sony.png" alt="hacked sony">
             <div class="card-body">
-              <h5 class="card-title">Hacked Chrome</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h5 class="card-title">Hacked Sony</h5>
+              <p class="card-text">In response to Sony's lawsuit against George Hotz and, specifically due to Sony's gaining access to the IP addresses of all the people who visited George Hotz's blog as part of the libel action, terming it an 'offensive against free speech and internet freedom'</p>
               <div class="card-body">
                 <a href="#" class="card-link">Take a Look</a>
               </div>
@@ -97,9 +97,9 @@
         <!-- Second Row, Second Column -->
         <div class="col">
           <div class="card border border-primary m-auto p-3" style="width:300px">
-            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <img class="card-img-top image-fluid" src="./assets/img/sarah_palin.jpg" alt="hacked sarah palin email">
             <div class="card-body">
-              <h5 class="card-title">Hacked Chrome</h5>
+              <h5 class="card-title">Hacked Sarah Palin's Email</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <div class="card-body">
                 <a href="#" class="card-link">Take a Look</a>
@@ -114,10 +114,10 @@
         <!-- Third Row, First Column -->
         <div class="col">
           <div class="card border border-primary m-auto p-3" style="width:300px">
-            <img class="card-img-top image-fluid" src="./assets/img/chrome-hacked-story-300x300.jpg" alt="hacked chrome">
+            <img class="card-img-top image-fluid" src="./assets/img/operation-india.png" alt="operation india">
             <div class="card-body">
-              <h5 class="card-title">Hacked Chrome</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h5 class="card-title">Operation India</h5>
+              <p class="card-text">The group has come out in support of a civil movement against corruption in India. This cyber movement has been named as 'Operation India'.</p>
               <div class="card-body">
                 <a href="#" class="card-link">Take a Look</a>
               </div>
